[project]
name = "tsp-mip"
authors = [{ name = "Du Shiqiao", email = "lucidfrontier.45@gmail.com" }]
version = "0.1.0"
description = "Example of solving the Traveling Salesman Problem using Mixed Integer Programming"
requires-python = ">=3.12"
dependencies = [
    "ortools>=9.11.4210",
    "pydanticio>=0.2.0",
    "tyro>=0.8.11",
]

[tool.uv]
managed = true
dev-dependencies = ["ruff>=0.6.2", "pyright>=1.1.377", "taskipy>=1.13.0"]

[tool.taskipy.tasks]
pyright_lint = "pyright ."
ruff_format = "ruff format ."
ruff_lint = "ruff check ."
ruff_fix = "ruff check --fix ."
format = "task ruff_fix && task ruff_format"
lint = "task ruff_lint && task pyright_lint"

[tool.pytest.ini_options]
filterwarnings = ["ignore::FutureWarning"]

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "W",
    "I",
    "B",
    "RUF",
    "UP",
    "N",
    "SIM",
    "A",
    "DTZ",
    "PIE",
    "PLE",
]
# add directory names to exclude from analysis
exclude = ["tests/**/*", "deps/**/*"]

[tool.ruff.lint.per-file-ignores]
"*/__init__.py" = ['F401']

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "basic"
# add directory names to exclude from analysis
ignore = ["deps"]
